# docs/swagger.json
@@ -22,8 +22,8 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "UserID",
-                        "name": "userID",
+                        "description": "logID",
+                        "name": "logID",
                         "in": "path",
                         "required": true
                     }
